--- a/style.css
+++ b/style.css
@@ -14,15 +14,15 @@ section{
 }
 .navBar{
     position: fixed;
+    flex-direction: column;
     top: 0%;
     left: 0%;
     display: flex;
-    flex-direction: column;
     width: 35%;
     height: 100vh;
 }
 .navBar h1{
-    font-size: 35px;
+    font-size: 2rem;
     font-weight: 700;
 }
 .bi{
@@ -49,6 +49,30 @@ background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 background-size: 400% 400%;
 animation: gradient 15s ease infinite;
 }
+.header a{
+  padding: 2%;
+  border: #000000 2px solid;
+  background-color: #b7ffe7;
+  font-size: .75rem;
+  border-radius: 10px;
+}
+.header a:hover{
+  background-color: #CD921E;
+}
+.header i{
+  font-size: 1rem;
+}
+.header h3{
+  margin-bottom: 2%;
+}
+#home .content-inside h4{
+ position: absolute;
+ top: 20rem;
+ left: 35%;
+}
+#home .content-inside i{
+  font-size: 1rem;
+}
 #about{
     position: relative;
     margin-left: 35%;
@@ -65,14 +89,7 @@ animation: gradient 15s ease infinite;
 }
 .about-container{
    padding: 10% 10px 50% 10px;
-}
-nav{
-    float: none; 
-    width: 100%; 
-    background: #fff;
-    margin-bottom: 75px;
-  }
-  
+} 
   nav ul {
     list-style: none;
     margin: 0px;
@@ -86,7 +103,7 @@ nav{
   nav li a{
     display: block; 
     width: 100%; 
-    padding: 25px; 
+    padding: 5% 0; 
     position: relative; 
     z-index: 2;
     text-decoration: none;
@@ -120,18 +137,26 @@ nav{
   nav li:nth-child(3) a:after{ background: #f0776c; }
   nav li:last-child a:after{ background: #1abc9c; }
   
-  .icon-links{
+  .icon-link-container{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+  }
+  .icon-link-container .icon-links{
     display: flex;
     justify-content: space-between;
     width: 90%;
+    padding:10% 5% 100% 5%;
+    margin: 2% auto;
+    
   }
   .bi{
     font-size: 2.5em;
     transition: 0.5s;
   }
-  .icon-links .bi:hover{
+  .icon-link-container .icon-links .bi:hover{
     color: #4f005f;
-    transform: scaleX(2.5em);
+    transform: translate(50%,50%)
   }
   #home{
     background-color: #3498db;
@@ -213,38 +238,89 @@ nav{
  #project{
   width: 65%;
   margin-left: 35%;
-  background-color: #f0776c;
+  background: linear-gradient(90deg, #f0776c 0%, #ffffff 100%);
   min-height: 100vh;
  }
 .project-container{
   text-align: center;
-  padding-top:70px; 
+  padding-top:10px; 
+  overflow: hidden;
 }
  .box{
-  width: 300px;
-  margin:30px 10px;
+  width:350px;
+  margin:10px;
+  background-color: #a9a9a9;
+  border: #666 solid 2px;
+  height: 250px;
+  overflow: hidden;
  }
+ .box .img-holder{
+  width: 350px;
+  height: 250px;
+ }
+ .box h3{
+  padding-bottom: 1em;}
+
  #project .box img{
+  filter: grayscale(1);
   width: 300px;
-  height: auto;
-  padding: 10px;
+ }
+ #project .box img:hover{
+  filter: none;
+  transform: scale(1.1);
+  transition: .3s;
  }
 .project-grid{
-  margin-top: 50px;
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 40%;
-  gap: 10px;
-  padding: 10px;
-  overflow-x: auto;
-  overscroll-behavior-inline: contain;
-  max-height: 600px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  overflow: hidden;
 }
-
+.page-1, .page-2, .page-3, .page-4{
+  margin: 5px auto 10px;
+  overflow: hidden;
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+ justify-content: space-evenly;
+ align-items: center;
+}
+.page-1{
+  z-index: 4;
+}
+.page-2{
+  z-index: 3;
+}
+.page-3{
+  z-index: 2;
+}
+.page-4{
+  margin-left: 27px;
+  gap: 27px;
+  z-index: 1;
+}
+#project .page-holder{
+ left: 37.5%;
+  position: absolute;
+  width: 60%;
+  top: 293%;
+  display: flex;
+  justify-content: space-between;
+}
+#project button{
+  background-color: #666;
+  width: 6em;
+  padding: 3px 7px;
+  font-size: 1.1em;
+  border-radius: 5%;
+}
+#project button:hover{
+  background-color: #1abc9c;
+}
  #contact{
   margin-left: 35%;
   width: 65%;
-  background-color: #1abc9c;
+  background: linear-gradient(90deg, #1abc9c 0%, #ffffff 100%);
   min-height: 100vh;
  }
  strong{
@@ -305,4 +381,54 @@ nav{
   border-radius: 50px;
   cursor: pointer;
   background: linear-gradient(270deg,#ff994f,#fa6d86);
+ }
+
+ @media (max-width: 700px) {
+ body{
+  display: flex;
+  flex-direction: column;
+ }
+ .navBar{
+  width: 100%;
+  position: relative;
+ }
+#home{
+  width: 100%;
+  margin-left: 0%;
+}
+#about{
+  width: 100%;
+  margin-left: 0%;
+}
+#project{
+  width: 100%;
+  margin-left: 0%;
+}
+#contact{
+  width: 100%;
+  margin-left: 0%;
+}
+#home .content-inside h4{
+  left: 30%;
+}
+.page-holder{
+  display: none;
+}
+.page-1, .page-2, .page-3, .page-4{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  z-index: 1;
+}
+.project-grid{
+  margin-top: 10px;
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: 50%;
+  gap: 10px;
+  padding: 10px;
+  overflow-x: auto;
+  overscroll-behavior-block: contain;
+  max-height: 90vh;
+}
  }
