--- a/style.css
+++ b/style.css
@@ -412,7 +412,7 @@ animation: gradient 15s ease infinite;
   left: 30%;
 }
 .page-holder{
-  display: none;
+ opacity: 0;
 }
 .page-1, .page-2, .page-3, .page-4{
   display: flex;
